@@ -1,3 +1,7 @@
+2000-04-05  Richard Henderson  <rth@cygnus.com>
+
+	* splay-tree.c (splay_tree_remove): New.
+
 2000-03-30  Mark Mitchell  <mark@codesourcery.com>
 
 	* hashtab.c (find_empty_slot_for_expand): Use hashval_t for hash
